versioned_docs/version-2026.1.1/professor/wylliam_salviano_gongora.mdx
---
sidebar_label: 'Wylliam Salviano Gongora'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Wylliam Salviano Gongora",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Máquinas elétricas - 2231",
          "size": 2,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "laboratorio_de_maquinas_e_acionamentos_eletricos_b4",
          "students": [
            "ELE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Máquinas Elétricas e Acionamentos - 110",
          "size": 2,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "laboratorio_de_maquinas_e_acionamentos_eletricos_b4",
          "students": [
            "ELM2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Máquinas elétricas - 2231",
          "size": 2,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "laboratorio_de_maquinas_e_acionamentos_eletricos_b4",
          "students": [
            "ELE2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Segurança e Saúde no Trabalho - 2594",
          "size": 2,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "sala_15-2",
          "students": [
            "TAI2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Projetos e Instalações Elétricas - 200",
          "size": 2,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "laboratorio_de_informatica_b",
          "students": [
            "EIN2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Máquinas e Acionamentos - 1575",
          "size": 3,
          "teachers": [
            "Wylliam Salviano Gongora"
          ],
          "classroom": "laboratorio_de_maquinas_e_acionamentos_eletricos_b4",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Wylliam Salviano Gongora

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

